ratings/ratings.yaml
apiVersion: v1
kind: Service
metadata:
  name: ratings
  namespace: bookinfo
  labels:
    app: ratings
    service: ratings
spec:
  ports:
  - port: 9080
    name: http
    targetPort: 9080
  selector:
    app: ratings
  type: ClusterIP
---
# Ratings v1
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ratings-v1
  namespace: bookinfo
  labels:
    app: ratings
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ratings
      version: v1
  template:
    metadata:
      labels:
        app: ratings
        version: v1
    spec:
      serviceAccountName: bookinfo-ratings
      containers:
      - name: ratings
        image: villanel/bookinfo-ratings:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 9080
---
# Ratings v2 (example with different configuration)
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ratings-v2
  namespace: bookinfo
  labels:
    app: ratings
    version: v2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ratings
      version: v2
  template:
    metadata:
      labels:
        app: ratings
        version: v2
    spec:
      serviceAccountName: bookinfo-ratings
      containers:
      - name: ratings
        image: villanel/bookinfo-ratings:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 9080
---
# Ratings version services
apiVersion: v1
kind: Service
metadata:
  name: ratings-v1
  namespace: bookinfo
spec:
  ports:
  - port: 9080
    name: http
  selector:
    app: ratings
    version: v1
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: ratings-v2
  namespace: bookinfo
spec:
  ports:
  - port: 9080
    name: http
  selector:
    app: ratings
    version: v2
  type: ClusterIP
