ratings/ratings-pr-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ratings-pr-route
  namespace: bookinfo
spec:
  parentRefs:
  - group: ""
    kind: Service
    name: ratings
    port: 9080
  rules:
  - matches:
    - headers:
      - type: RegularExpression
        name: "baggage"
        value: ".*pr_id=test_pr_id.*"
    backendRefs:
    - name: ratings-v2
      port: 9080
